[gd_scene load_steps=9 format=3 uid="uid://d200d8xddyewa"]

[ext_resource type="Script" path="res://vehicles/VehicleController.gd" id="1_6m82k"]
[ext_resource type="Script" path="res://vehicles/VehicleMovementComponent.gd" id="1_fuh5o"]
[ext_resource type="Material" uid="uid://dbukdlfh1ru80" path="res://materials/wheels_mat.tres" id="3_uqm8k"]

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_uq8my"]
friction = 0.5

[sub_resource type="BoxMesh" id="BoxMesh_maatj"]
size = Vector3(1, 1.5, 3)

[sub_resource type="BoxShape3D" id="BoxShape3D_m2sqv"]
size = Vector3(1, 1.4, 2.8)

[sub_resource type="CylinderMesh" id="CylinderMesh_2eyw1"]
material = ExtResource("3_uqm8k")
height = 0.2

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_lvs57"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:rotation")
properties/1/spawn = true
properties/1/replication_mode = 1
properties/2/path = NodePath("VehicleMovementComponent:position")
properties/2/spawn = true
properties/2/replication_mode = 1
properties/3/path = NodePath("VehicleMovementComponent:rotation")
properties/3/spawn = true
properties/3/replication_mode = 1

[node name="VehicleController" type="Node3D" node_paths=PackedStringArray("movement_component")]
script = ExtResource("1_6m82k")
movement_component = NodePath("VehicleMovementComponent")
metadata/Interactable = true

[node name="VehicleMovementComponent" type="VehicleBody3D" parent="." node_paths=PackedStringArray("controller")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.223, 0)
mass = 50.0
physics_material_override = SubResource("PhysicsMaterial_uq8my")
center_of_mass_mode = 1
script = ExtResource("1_fuh5o")
controller = NodePath("..")
metadata/Interactable = true

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleMovementComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 0)
mesh = SubResource("BoxMesh_maatj")

[node name="CollisionShape3D" type="CollisionShape3D" parent="VehicleMovementComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.1, 1.19209e-07)
shape = SubResource("BoxShape3D_m2sqv")

[node name="Wheel1" type="VehicleWheel3D" parent="VehicleMovementComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.5, 1.9)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_rest_length = 0.4
wheel_friction_slip = 1.0
suspension_travel = 0.1
suspension_stiffness = 70.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleMovementComponent/Wheel1"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_2eyw1")

[node name="Wheel2" type="VehicleWheel3D" parent="VehicleMovementComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.5, 1.9)
use_as_traction = true
use_as_steering = true
wheel_roll_influence = 0.4
wheel_rest_length = 0.4
wheel_friction_slip = 1.0
suspension_travel = 0.1
suspension_stiffness = 70.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleMovementComponent/Wheel2"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_2eyw1")

[node name="Wheel3" type="VehicleWheel3D" parent="VehicleMovementComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.6, 0.5, -1.5)
use_as_traction = true
wheel_roll_influence = 0.4
wheel_rest_length = 0.4
wheel_friction_slip = 1.0
suspension_travel = 0.1
suspension_stiffness = 70.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleMovementComponent/Wheel3"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_2eyw1")

[node name="Wheel4" type="VehicleWheel3D" parent="VehicleMovementComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.6, 0.5, -1.5)
use_as_traction = true
wheel_roll_influence = 0.4
wheel_rest_length = 0.4
wheel_friction_slip = 1.0
suspension_travel = 0.1
suspension_stiffness = 70.0

[node name="MeshInstance3D" type="MeshInstance3D" parent="VehicleMovementComponent/Wheel4"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_2eyw1")

[node name="DriverSeat" type="Node3D" parent="VehicleMovementComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2.877, 0)

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_lvs57")
